iproute2 (5.10.0-4jens23) tarent; urgency=low

  * Rename package to iproute2-jens and iproute2-jens-doc
    for easier installation on Debian bookworm, etc.
    (ofc with versioned Provides of the old names)
  * iproute2-jens Recommends sch-jens-dkms
  * bookworm/kinetic need B-D: dh-dkms (explicitly)

 -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 27 Aug 2023 17:20:17 +0200

iproute2 (5.10.0-4jens22) tarent; urgency=medium

  * Fix installation compiling from package

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Aug 2023 17:33:29 +0200

iproute2 (5.10.0-4jens21) tarent; urgency=medium

  * Improve quality of stochastics
  * Make LKMs compatible with Linux 6.4
  * Improve qosmode-related documentation, incorporating field xp
  * Better error reporting at configure time
  * Improve qsz reporting scheduling
  * On PREEMPT_DYNAMIC kernels suggest preempt=none for boot cmdline
  * Don’t backdate packets to before they arrived
  * Fix some bw rate conversions
  * Limit extralatency to 2 seconds
  * Return to full nanosecond precision internally
  * Use qdisc_pkt_len to guess at wire size
  * Change TC_JANZ_RELAY_QUEUESZ.d32 to qdisc length in (wire) octets

 -- Thorsten Glaser <t.glaser@tarent.de>  Thu, 17 Aug 2023 17:16:50 +0200

iproute2 (5.10.0-4jens20) tarent; urgency=low

  * Install qdisc operation documentation
  * Add experimental sch_multijens qdisc and mratedemo
  * Improve documentation
  * Small reliability improvement in initialisation code

 -- Thorsten Glaser <t.glaser@tarent.de>  Mon, 19 Jun 2023 21:15:48 +0200

iproute2 (5.10.0-4jens19) tarent; urgency=medium

  * Add qdisc inner workings documentation picture
  * Java: improve sojourn time display
  * Record the “real one-way delay” through sch_janz (comprised of
    extralatency, queue delay and (later…) retransmission delays)
  * Mention -rt kernel trouble; renicing ksoftirqd is probably unneeded
  * Record queue size only every 500 ms unless triggered (which it is
    frequently)