@@ -24,6 +24,7 @@ Build-Depends: bison,
                libmnl-dev,
                libselinux1-dev,
                linux-libc-dev,
+               lsb-release,
                pkg-config,
                po-debconf,
                zlib1g-dev,
@@ -34,6 +35,7 @@ Architecture: linux-any
 Provides: arpd, iproute2 (= ${binary:Version}), iproute-janz
 Conflicts: arpd, iproute (<< 20130000-1), iproute2
 Replaces: iproute, iproute2
+Pre-Depends: ${misc:Pre-Depends}, ${jens:prereq}
 Depends: ${misc:Depends}, ${shlibs:Depends}, libcap2-bin,
 Recommends: iproute2-jens-doc, sch-jens-dkms, ${ipmods:Recommends}
 Multi-Arch: foreign
