@@ -30,6 +30,20 @@ endif
 export KERNEL_INCLUDE=./include
 export NETNS_RUN_DIR=/run/netns
 
+distrel := $(shell lsb_release --codename --short)
+
+ifeq (bullseye,${distrel})
+vdeps := base-files (>= 11.1+deb11u1), base-files (<< 11.1+deb12)
+else ifeq (bookworm,${distrel})
+vdeps := base-files (>= 12.4+deb12u1), base-files (<< 12.4+deb13)
+else ifeq (focal,${distrel})
+vdeps := base-files (>= 11ubuntu5), base-files (<< 11ubuntu6)
+else ifeq (jammy,${distrel})
+vdeps := base-files (>= 12ubuntu4), base-files (<< 12ubuntu5)
+else
+$(error cannot build for distribution/release ${distrel})
+endif
+
 %:
 	dh $@ --with dkms
 
@@ -52,6 +66,7 @@ override_dh_auto_test:
 # We are not shipping the ifstat binary as it conflicts with another Debian
 # package, so avoid shipping the manpage as well. See #873818
 override_dh_install:
+	echo 'jens:prereq=${vdeps}' >>debian/iproute2-jens.substvars
 	dh_install -Xifstat.8
 
 # work around #736803
