@@ -5,8 +5,9 @@ iproute2 (5.10.0-4jens23) tarent; urgency=low
     (ofc with versioned Provides of the old names)
   * iproute2-jens Recommends sch-jens-dkms
   * bookworm/kinetic need B-D: dh-dkms (explicitly)
+  * Distinguish bullseye/bookworm/focal/jammy builds with Pre-Depends
 
- -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 27 Aug 2023 17:20:17 +0200
+ -- Thorsten Glaser <t.glaser@tarent.de>  Sun, 27 Aug 2023 17:38:27 +0200
 
 iproute2 (5.10.0-4jens22) tarent; urgency=medium
 
